# cal-server

./: .gitignore  Cargo.toml  README.md  build_linux.sh
db/database/: CURRENT.db
db/ddl/: calendar.sql  caluser.sql  create_caluser.sql  create_event.sql  dayofweek.sql  event.sql  notification.sql  series.sql  sharedcalendar.sql
postman/: CAL.postman_collection.json
src/: lib.rs  main.rs
src/args/: mod.rs  programargs.rs
src/db/: calconnector.rs  init.rs  mod.rs
src/models/: caluser.rs  construct.rs  event.rs  mod.rs
src/models/cal/: calendar.rs  caluser.rs  event.rs  mod.rs  notification.rs  series.rs  sharedcalendar.rs
src/models/requests/: createeventrequest.rs  mod.rs
src/models/responses/: caluserresponse.rs  createcaluserresponse.rs  createeventresponse.rs  eventsresponse.rs  mod.rs  neweventresponse.rs
src/models/server/requests/: createcalendarrequest.rs  createcaluserrequest.rs  createeventrequest.rs  createnotificationrequest.rs  createseriesrequest.rs  createsharedcalendarrequest.rs  mod.rs  updateeventrequest.rs  updateseriesrequest.rs
src/models/server/responses/: allseriesresponse.rs  calendarsresponse.rs  caluserresponse.rs  createcalendarresponse.rs  createcaluserresponse.rs  (+13 more)
src/models/traits/: construct.rs  mod.rs  optional64.rs  validate.rs
src/routes/: adminroutes.rs  calendarroutes.rs  caluser.rs  caluserroutes.rs  event.rs  eventroutes.rs  mod.rs  notificationroutes.rs  seriesroutes.rs
src/server/: apikey.rs  apikeymiddleware.rs  clientmessage.rs  disconnect.rs  httpserver.rs  message.rs  mod.rs  notificationsession.rs
