[package]
name = "cal-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.27.0", features = ["bundled"] }
actix-web = "4.0.1"
clap = { version = "3.1.6", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
env_logger = "0.9.0"
rand = "0.8.5"
uuid = { version = "0.8", features = ["serde", "v4"] }



