[package]
name = "cal-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.27.0", features = ["bundled"] }
actix-web = { version = "4.11.0" }
clap = { version = "3.1.6", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
env_logger = "0.11.8"
rand = "0.9.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
futures-util = "0.3.31"
itertools = "0.10.5"

[dependencies.serde_with]
version = "2.0.0"
features = [ "chrono_0_4" ]
